HK233/main/.antlr/MT22Parser.py
# Generated from /home/don/Code/Course/PPL/HK233/main/MT22.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'::'", "'['", "']'", "'('", 
                     "')'", "','", "'.'", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", 
                      "NOT_EQUAL", "LT", "GT", "LE", "GE", "CONCAT", "LSB", 
                      "RSB", "LP", "RP", "CM", "DOT", "SC", "COL", "LCB", 
                      "RCB", "ASSIGNINIT", "ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "COMMENTS", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_list_declared = 1
    RULE_declared = 2
    RULE_variables = 3
    RULE_variables_initialization = 4
    RULE_list_identifier = 5
    RULE_all_types = 6
    RULE_atomic_type = 7
    RULE_array_type = 8
    RULE_dimensions = 9
    RULE_function = 10
    RULE_prameters_list = 11
    RULE_prameter = 12
    RULE_list_expression = 13
    RULE_expression = 14
    RULE_expression1 = 15
    RULE_expression2 = 16
    RULE_expression3 = 17
    RULE_expression4 = 18
    RULE_expression5 = 19
    RULE_expression6 = 20
    RULE_expression7 = 21
    RULE_expression8 = 22
    RULE_literal = 23
    RULE_array_literal = 24
    RULE_statement = 25
    RULE_declaration_statement = 26
    RULE_assignment_statement = 27
    RULE_lhs = 28
    RULE_if_statement = 29
    RULE_for_statement = 30
    RULE_while_statement = 31
    RULE_do_while_statement = 32
    RULE_break_statement = 33
    RULE_continue_statement = 34
    RULE_return_statement = 35
    RULE_call_statement = 36
    RULE_block_statement = 37
    RULE_list_statement = 38

    ruleNames =  [ "program", "list_declared", "declared", "variables", 
                   "variables_initialization", "list_identifier", "all_types", 
                   "atomic_type", "array_type", "dimensions", "function", 
                   "prameters_list", "prameter", "list_expression", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "expression8", 
                   "literal", "array_literal", "statement", "declaration_statement", 
                   "assignment_statement", "lhs", "if_statement", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "call_statement", 
                   "block_statement", "list_statement" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQUAL=30
    NOT_EQUAL=31
    LT=32
    GT=33
    LE=34
    GE=35
    CONCAT=36
    LSB=37
    RSB=38
    LP=39
    RP=40
    CM=41
    DOT=42
    SC=43
    COL=44
    LCB=45
    RCB=46
    ASSIGNINIT=47
    ID=48
    INT_LIT=49
    FLOAT_LIT=50
    STRING_LIT=51
    COMMENTS=52
    WS=53
    ERROR_CHAR=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_declared(self):
            return self.getTypedRuleContext(MT22Parser.List_declaredContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.list_declared()
            self.state = 79
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_declaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self):
            return self.getTypedRuleContext(MT22Parser.DeclaredContext,0)


        def list_declared(self):
            return self.getTypedRuleContext(MT22Parser.List_declaredContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_list_declared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_declared" ):
                listener.enterList_declared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_declared" ):
                listener.exitList_declared(self)




    def list_declared(self):

        localctx = MT22Parser.List_declaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_declared)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.declared()
                self.state = 82
                self.list_declared()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.declared()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MT22Parser.FunctionContext,0)


        def variables(self):
            return self.getTypedRuleContext(MT22Parser.VariablesContext,0)


        def SC(self):
            return self.getToken(MT22Parser.SC, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_declared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclared" ):
                listener.enterDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclared" ):
                listener.exitDeclared(self)




    def declared(self):

        localctx = MT22Parser.DeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declared)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.function()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.variables()
                self.state = 89
                self.match(MT22Parser.SC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables_initialization(self):
            return self.getTypedRuleContext(MT22Parser.Variables_initializationContext,0)


        def list_identifier(self):
            return self.getTypedRuleContext(MT22Parser.List_identifierContext,0)


        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def all_types(self):
            return self.getTypedRuleContext(MT22Parser.All_typesContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables" ):
                listener.enterVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables" ):
                listener.exitVariables(self)




    def variables(self):

        localctx = MT22Parser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.variables_initialization()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.list_identifier()
                self.state = 95
                self.match(MT22Parser.COL)
                self.state = 96
                self.all_types()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variables_initializationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def variables_initialization(self):
            return self.getTypedRuleContext(MT22Parser.Variables_initializationContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def all_types(self):
            return self.getTypedRuleContext(MT22Parser.All_typesContext,0)


        def ASSIGNINIT(self):
            return self.getToken(MT22Parser.ASSIGNINIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variables_initialization

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariables_initialization" ):
                listener.enterVariables_initialization(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariables_initialization" ):
                listener.exitVariables_initialization(self)




    def variables_initialization(self):

        localctx = MT22Parser.Variables_initializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variables_initialization)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(MT22Parser.ID)
                self.state = 101
                self.match(MT22Parser.CM)
                self.state = 102
                self.variables_initialization()
                self.state = 103
                self.match(MT22Parser.CM)
                self.state = 104
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(MT22Parser.ID)
                self.state = 107
                self.match(MT22Parser.COL)
                self.state = 108
                self.all_types()
                self.state = 109
                self.match(MT22Parser.ASSIGNINIT)
                self.state = 110
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_identifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def list_identifier(self):
            return self.getTypedRuleContext(MT22Parser.List_identifierContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_list_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_identifier" ):
                listener.enterList_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_identifier" ):
                listener.exitList_identifier(self)




    def list_identifier(self):

        localctx = MT22Parser.List_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_identifier)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(MT22Parser.ID)
                self.state = 115
                self.match(MT22Parser.CM)
                self.state = 116
                self.list_identifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class All_typesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_all_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAll_types" ):
                listener.enterAll_types(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAll_types" ):
                listener.exitAll_types(self)




    def all_types(self):

        localctx = MT22Parser.All_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_all_types)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 7, 11, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.atomic_type()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.array_type()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_type" ):
                listener.enterAtomic_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_type" ):
                listener.exitAtomic_type(self)




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 10376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_type" ):
                listener.enterArray_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_type" ):
                listener.exitArray_type(self)




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MT22Parser.ARRAY)
            self.state = 128
            self.match(MT22Parser.LSB)
            self.state = 129
            self.dimensions()
            self.state = 130
            self.match(MT22Parser.RSB)
            self.state = 131
            self.match(MT22Parser.OF)
            self.state = 132
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MT22Parser.INT_LIT, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensions" ):
                listener.enterDimensions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensions" ):
                listener.exitDimensions(self)




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimensions)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(MT22Parser.INT_LIT)
                self.state = 135
                self.match(MT22Parser.CM)
                self.state = 136
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(MT22Parser.INT_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementContext,0)


        def all_types(self):
            return self.getTypedRuleContext(MT22Parser.All_typesContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def prameters_list(self):
            return self.getTypedRuleContext(MT22Parser.Prameters_listContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = MT22Parser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MT22Parser.ID)
            self.state = 141
            self.match(MT22Parser.COL)
            self.state = 142
            self.match(MT22Parser.FUNCTION)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 7, 11, 13, 21]:
                self.state = 143
                self.all_types()
                pass
            elif token in [16]:
                self.state = 144
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 147
            self.match(MT22Parser.LP)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474977890304) != 0):
                self.state = 148
                self.prameters_list()


            self.state = 151
            self.match(MT22Parser.RP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 152
                self.match(MT22Parser.INHERIT)
                self.state = 153
                self.match(MT22Parser.ID)


            self.state = 156
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prameters_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prameter(self):
            return self.getTypedRuleContext(MT22Parser.PrameterContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def prameters_list(self):
            return self.getTypedRuleContext(MT22Parser.Prameters_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_prameters_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrameters_list" ):
                listener.enterPrameters_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrameters_list" ):
                listener.exitPrameters_list(self)




    def prameters_list(self):
